--- a/angular-rest/src/app/projeto-angular/projeto-angular.component.html
+++ b/angular-rest/src/app/projeto-angular/projeto-angular.component.html
@@ -23,7 +23,11 @@
      <th>Deleta</th>
      <th>Alterar</th>
    </tr>
-   <tr>
-     
+   <tr *ngFor="let curso of listarCursos" >
+     <th>{{ curso.id }}</th>
+     <th><input type="text"  id="nome" class="form-control"  value="{{ curso.nome }}"/></th>
+     <th><input type="text"  id="duracao" class="form-control"  value="{{ curso.duracao }}"/></th>
+     <th><button class="btn btn-danger" (click)="metodoDeleta()">Excluir</button></th>
+     <th><button class="btn btn-danger">Alterar</button></th>
    </tr>
 </table>
