criando o metaodo de pesquisar e chmando no Angular4

--- a/angular-rest/src/app/projeto-angular/projeto-angular.component.html
+++ b/angular-rest/src/app/projeto-angular/projeto-angular.component.html
@@ -12,8 +12,21 @@
   </div>
 
   <button type="submit" class="btn btn-danger" (click)=" metodoAdicionar()">
-    Cadastra</button>
+    Cadastra
+  </button>
 </form>
+<br>
+<form class="form-control">
+  <div class="form-group">
+     <input type="text" class="form-control" id="buscar" placeholder="nome do curso" 
+       [(ngModel)]="buscarNome" name="curso"/>
+     <br>
+     <button type="submit" class="btn btn-danger" (click)="metodoBuscar()">
+       Pesquisar
+     </button>
+  </div>
+</form>
+
 <br>
 <table class="table table-striped">
    <tr>
