terceira parte da comunicação de componentes

--- a/angular-rest/src/app/angular-form/angular-form.component.html
+++ b/angular-rest/src/app/angular-form/angular-form.component.html
@@ -6,7 +6,7 @@
     <th>Deleta</th>
     <th>Alterar</th>
   </tr>
-  <tr *ngFor="let curso of listarCursos">
+  <tr *ngFor="let curso of metodoListarCurso">
     <th>{{ curso.id }}</th>
     <th>
       <input type="text"  id="nome" class="form-control" name="nomeIn" 
