--- a/angular-rest/src/app/app.component.html
+++ b/angular-rest/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-projeto-angular></app-projeto-angular>
+<app-projeto-angular (metodoListarCurso)="metodoAdicionarCurso($event)"></app-projeto-angular>
 <br>
 <app-angular-pesquisar></app-angular-pesquisar>
 <br>
-<app-angular-form></app-angular-form>
+<app-angular-form [metodoListarCurso]="metodoListarCurso"></app-angular-form>
