--- a/angular-rest/src/app/angular-form/angular-form.component.html
+++ b/angular-rest/src/app/angular-form/angular-form.component.html
@@ -1,3 +1,17 @@
+<form class="form-control">
+  <div class="form-group">
+     <input type="text" class="form-control" id="buscar" placeholder="nome do curso" 
+       [(ngModel)]="buscarNome" name="curso"/>
+     <br>
+     <button type="submit" class="btn btn-danger" (click)="metodoBuscar()">
+       Pesquisar
+     </button>
+     <button type="submit" class="btn btn-danger" (click)="ngOnInit()">
+       Listar
+     </button>
+  </div>
+</form>
+<br>
 <table class="table table-striped">
   <tr>
     <th>Id</th>
