começando a usar primeNG

--- a/angular-rest/src/app/angular-form/angular-form.component.html
+++ b/angular-rest/src/app/angular-form/angular-form.component.html
@@ -1,4 +1,4 @@
-<form class="form-control">
+<!--form class="form-control">
   <div class="form-group">
      <input type="text" class="form-control" id="buscar" placeholder="nome do curso" 
        [(ngModel)]="buscarNome" name="curso"/>
@@ -42,4 +42,4 @@
       </button>
     </th>
   </tr>
-</table>
+</table-->
