--- a/angular-rest/src/app/projeto-angular/projeto-angular.component.html
+++ b/angular-rest/src/app/projeto-angular/projeto-angular.component.html
@@ -1,4 +1,4 @@
-<form class="form-control">
+<!--form class="form-control">
   <div class="form-group has-success">
     <label for="curso">Curso</label>
     <input type="text" class="form-control" id="nome" placeholder="Java"
@@ -15,4 +15,7 @@
     Cadastra
   </button>
 </form>
-<br>
+<br-->
+<p-fieldset legend="Header">
+  <h1>Cursos on-lline</h1>
+</p-fieldset>
