--- a/angular-rest/src/app/angular-form/angular-form.component.html
+++ b/angular-rest/src/app/angular-form/angular-form.component.html
@@ -43,3 +43,22 @@
     </th>
   </tr>
 </table-->
+
+<fieldset>
+  <h3>Procure seu curso:</h3>
+  <span class="ui-float-label">
+    <input id="float-input" type="text" size="30" pInputText> 
+    <label for="float-input">Html</label>
+  </span>
+  <br>
+  <button pButton type="button" (click)="metodoBuscar()" label="Pesquisar"  class="ui-button-danger">
+  </button>
+  <button pButton type="button" (click)="metodoBuscar()" label="Listar"  class="ui-button-danger">
+  </button>
+</fieldset>
+<br>
+<p-dataTable [value]="cars" [loading]="true">
+  <p-column header="Curso"></p-column>
+  <p-column header="Duração"></p-column>
+  
+</p-dataTable>
