--- a/angular-rest/src/app/projeto-angular/projeto-angular.component.html
+++ b/angular-rest/src/app/projeto-angular/projeto-angular.component.html
@@ -16,6 +16,22 @@
   </button>
 </form>
 <br-->
-<p-fieldset legend="Header">
-  <h1>Cursos on-lline</h1>
-</p-fieldset>
+<fieldset>
+  <h3>Curso:</h3>
+  <span class="ui-float-label">
+    <input id="float-input" type="text" size="30" pInputText> 
+    <label for="float-input">Java</label>
+  </span>
+  <h3>Duração:</h3>
+  <span class="ui-float-label">
+    <input id="float-input" type="text" size="30" pInputText> 
+    <label for="float-input">00hs</label>
+  </span>
+  <br>
+  <button pButton type="button" (click)="metodoAdicionar()" label="Cadastra"  class="ui-button-danger">
+  </button>
+  <button pButton type="button" (click)="metodoAdicionar()" label="Limpar"  class="ui-button-danger">
+  </button>
+</fieldset>
+
+  
