--- a/angular-rest/src/app/projeto-angular/projeto-angular.component.html
+++ b/angular-rest/src/app/projeto-angular/projeto-angular.component.html
@@ -28,9 +28,11 @@
     <label for="float-input">00hs</label>
   </span>
   <br>
-  <button pButton type="button" (click)="metodoAdicionar()" label="Cadastra"  class="ui-button-danger">
+  <button pButton type="button" (click)="metodoAdicionar()" label="Cadastra"  
+  class="ui-button-primary">
   </button>
-  <button pButton type="button" (click)="metodoAdicionar()" label="Limpar"  class="ui-button-danger">
+  <button pButton type="button" (click)="metodoAdicionar()" label="Limpar"  
+  class="ui-button-primary">
   </button>
 </fieldset>
 
