criando o arquivo .gitignore e colocando css no projeto

--- a/angular-rest/src/app/angular-form/angular-form.component.css
+++ b/angular-rest/src/app/angular-form/angular-form.component.css
@@ -1,10 +1,11 @@
 fieldset{
     margin-left: 60px;   
-    margin-right: 60px;  
+    margin-right: 57px;  
 }
 
 input{
     height: 35px;
+    width: 400px;
 }
 
 h3{
