--- a/angular-rest/src/app/angular-form/angular-form.component.html
+++ b/angular-rest/src/app/angular-form/angular-form.component.html
@@ -47,7 +47,7 @@
 <fieldset>
   <h3>Procure seu curso:</h3>
   <span class="ui-float-label">
-    <input id="float-input" type="text" size="30" styleClass="col-inp"pInputText> 
+    <input id="float-input" type="text" size="30" pInputText> 
     <label for="float-input">Html</label>
   </span>
   <br>
@@ -57,27 +57,27 @@
   </button>
 </fieldset>
 <br>
-<p-dataTable [value]="metodoListarCurso">
-  <p-column field="id" header="id"></p-column>
-  <p-column field="nome" header="Curso">
+<p-dataTable [value]="metodoListarCurso" styleClass="col-form">
+  <p-column field="id" header="id" styleClass="col-id"></p-column>
+  <p-column field="nome" header="Curso" styleClass="col-curso">
     <ng-template pTemplate="body" let-curso="rowData">
        <input id="float-input" type="text" name="nomeIn" 
        value="{{ curso.nome }}" pInputText #nomeIn>
     </ng-template>
   </p-column>
-  <p-column field="duracao" header="Duração">
+  <p-column field="duracao" header="Duração" styleClass="col-duracao">
     <ng-template pTemplate="body" let-curso="rowData">
           <input id="float-input" type="text" name="duracaoIn" 
           value="{{ curso.duracao }}" pInputText #duracaoIn>
     </ng-template>
   </p-column>
-  <p-column header="Excluir">
+  <p-column header="Excluir" styleClass="col-excluir">
       <ng-template pTemplate="body" let-curso="rowData">
           <button pButton icon="fa-trash" (click)="metodoDeleta( curso.id )">
           </button>
       </ng-template>
   </p-column>
-  <p-column header="Alterar">
+  <p-column header="Alterar" styleClass="col-alterar">
       <ng-template pTemplate="body" let-curso="rowData">
           <button pButton icon="fa-pencil" (click)="metodoAlterar( curso.id, nomeIn.value, 
           duracaoIn.value )"></button>
