--- a/angular-rest/src/app/projeto-angular/projeto-angular.component.html
+++ b/angular-rest/src/app/projeto-angular/projeto-angular.component.html
@@ -26,13 +26,13 @@
   <h3>Curso:</h3>
   <span class="ui-float-label">
     <input id="float-input" type="text" size="30" pInputText 
-    formControlName="nome" #nome> 
+    formControlName="nome" #nome pTooltip="*Campo Obrigatorio" tooltipPosition="top"> 
     <label for="float-input">Java</label>
   </span>
   <h3>Duração:</h3>
   <span class="ui-float-label">
     <input id="float-input" type="text" size="30" pInputText
-    formControlName="duracao" #duracao> 
+    formControlName="duracao" #duracao pTooltip="*Campo Obrigatorio" tooltipPosition="top"> 
     <label for="float-input">00hs</label>
   </span>
   <br>
